--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <meta property="og:site_name" content="SulitFinds" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://sulitfinds.com/og-default.svg" />
+    <link rel="icon" type="image/png" href="/logo/websitelogo.png" />
     <link rel="canonical" href="https://sulitfinds.com" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7L8HGVP5MZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-7L8HGVP5MZ");
+    </script>
     <title>SulitFinds</title>
   </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
