fix: update related post links for consistency across multiple articles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       gtag("js", new Date());
       gtag("config", "G-7L8HGVP5MZ");
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445824954891095" crossorigin="anonymous"></script>
     <title>SulitFinds</title>
   </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
