--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:site_name" content="SulitFinds" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://sulitfinds.com/og-default.png" />
+    <meta name="p:domain_verify" content="906933cb41e0c7b516754e2e51f48fe6"/>
     <link rel="icon" type="image/png" href="/logo/websitelogo.png" />
     <link rel="canonical" href="https://sulitfinds.com" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7L8HGVP5MZ"></script>
