Complete quality-first messaging updates across project
- index.html: Updated meta description to practical living guides
- BlogIndex: Changed subtitle and SEO description
- Home: Changed 'Shop by category' to 'Browse by topic'
- README: Updated project description
- monetization-roadmap: Reordered with AdSense first, added quality-first principle
- Regenerated sitemap

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Budget-friendly product recommendations in the Philippines."
+      content="Practical living guides for budget-conscious Filipinos. Tips, guides, and smart recommendations."
     />
     <meta property="og:site_name" content="SulitFinds" />
     <meta property="og:type" content="website" />
