--- a/index.html
+++ b/index.html
@@ -3,30 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Practical living guides for budget-conscious Filipinos. Tips, guides, and smart recommendations."
-    />
-    <meta property="og:site_name" content="SulitFinds" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://sulitfinds.com/og-default.png" />
+    <!--head-tags-->
     <meta name="p:domain_verify" content="906933cb41e0c7b516754e2e51f48fe6"/>
     <link rel="icon" type="image/png" href="/logo/websitelogo.png" />
-    <link rel="canonical" href="https://sulitfinds.com" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7L8HGVP5MZ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-7L8HGVP5MZ");
-    </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5445824954891095" crossorigin="anonymous"></script>
     <title>SulitFinds</title>
   </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
-    <div id="root"></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
